# fuzzer

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SPEC.md  dictionary.txt  fuzzer.py  pyproject.toml  run.sh  test_target.c
corpus_zlib/: edge_tracker.json  markov.json  sensitivity.json  state.json
dictionaries/: jpeg.gram  png.dict  png.gram  rar.dict  rar.gram
docs/: .PLAN.md  FINDINGS.md  TODO.md  exec-budget-spike.md  inprocess-limitations.md  tracecmp-howto.md
targets/: asan_target  asan_target.c  asan_target.profile_cache  cmplog_exercise.c  fgrep_read.c  fuzz_pattern_match.c  fuzz_regex_compile.c  fuzz_search_pipeline.c  fuzz_shm.c  gzip_read  gzip_read.c  jpeg_read.c  nop_target.c  png_read  png_read.c  proto_target.c  tailslayer_read.cpp  test_target  test_target.c  test_target.profile_cache  test_target_nosan.profile_cache  tracecmp_target.c  unrar_read.c  zlib_read  zlib_read.c
tests/: test_bloom.py  test_bloom_fuzzy.py  test_cmplog.py  test_colorization.py  test_colorizer.py  test_commands.py  test_commands_extended.py  test_corpus_compression.py  test_corpus_minimization.py  test_count_class.py  test_crash_metadata.py  test_critical_slowing.py  test_delta_corpus.py  test_differential.py  test_differential_tracker.py  test_distance.py  test_distance_unit.py  test_dmesg.py  test_edge_metrics.py  test_edge_tracker.py  test_elf.py  test_elo.py  test_entropy.py  test_execution_time.py  test_filesystem.py  test_filesystem_extended.py  test_forkserver.py  test_format_learner.py  test_frameshift.py  test_fuzzer.py  test_ga.py  test_game_theory.py  test_grammar.py  test_grammar_unit.py  test_import_corpus.py  test_information_theory.py  test_inprocess_crash.py  test_integration.py  test_main.py  test_markov.py  (+38 more)
tools/: bench.sh  bench_cache.py  bench_randpool.py  corpus_png.py  (+13 more)
(+95 files in other folders)
