[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuzzer-tool"
version = "0.1.0"
description = "Coverage-guided binary fuzzer with Markov chain and Monte Carlo mutations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dario Clavijo", email = "clavijodario@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
]
capstone = [
    "capstone>=5.0",
]

[project.scripts]
fuzzer-tool = "fuzzer_tool.cli.commands:main"

[project.urls]
Homepage = "https://github.com/daedalus/fuzzer-tool"
Repository = "https://github.com/daedalus/fuzzer-tool"

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzer_tool"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
